observability/deployment-grafana.yaml
# Source: grafana/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: observability
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/part-of: clickhouse-observability-stack
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: grafana-0.1.0
    app.kubernetes.io/version: "13.2.2"
    environment: dev
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
      app.kubernetes.io/instance: grafana
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
        app.kubernetes.io/instance: grafana
      annotations:
        checksum/config: bb8a166a43781d66ec269abd01551522071f82aaadbbc9ca28b0c9a6cb22f56d
    spec:
      serviceAccountName: grafana
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 472
        runAsGroup: 472
        runAsNonRoot: true
        runAsUser: 472
      terminationGracePeriodSeconds: 30
      containers:
        - name: grafana
          image: "docker.io/grafana/grafana:13.2.2-distroless"
          imagePullPolicy: IfNotPresent
          ports:
            - name: grafana
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /api/health
              port: grafana
            initialDelaySeconds: 60
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/health
              port: grafana
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /etc/grafana/grafana.ini
              name: config
              subPath: grafana.ini
            - mountPath: /etc/grafana/provisioning/datasources/datasources.yaml
              name: config
              subPath: datasources.yaml
            - mountPath: /etc/grafana/provisioning/dashboards/dashboards.yaml
              name: config
              subPath: dashboards.yaml
            - mountPath: /var/lib/grafana/dashboards
              name: dashboards
            - mountPath: /var/lib/grafana
              name: storage
            - mountPath: /var/lib/grafana/plugins
              name: plugins
            - mountPath: /var/lib/grafana-search
              name: search
            - mountPath: /etc/grafana/provisioning/alerting
              name: alerts
      volumes:
        - name: alerts
          configMap:
            name: 'grafana-alerts'
            optional: true
        - name: config
          configMap:
            name: 'grafana-config'
        - name: dashboards
          configMap:
            name: 'grafana-dashboards'
        - name: plugins
          emptyDir: {}
        - name: search
          emptyDir: {}
        - name: storage
          emptyDir: {}
        - name: tmp
          emptyDir: {}
