observability/deployment-otel-collector.yaml
# Source: otel-collector/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  namespace: observability
  labels:
    app.kubernetes.io/name: otel-collector
    app.kubernetes.io/instance: otel-collector
    app.kubernetes.io/part-of: clickhouse-observability-stack
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: otel-collector-0.1.0
    app.kubernetes.io/version: "0.161.0"
    environment: dev
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: otel-collector
      app.kubernetes.io/instance: otel-collector
  template:
    metadata:
      labels:
        app.kubernetes.io/name: otel-collector
        app.kubernetes.io/instance: otel-collector
      annotations:
        checksum/config: bddad34aaa19f5d0ba896b41b9d380000b99460ec7378226d8fc4a6861e8698f
    spec:
      serviceAccountName: otel-collector
      automountServiceAccountToken: true
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
      containers:
        - name: otel-collector
          image: "otel/opentelemetry-collector-contrib:0.161.0"
          imagePullPolicy: IfNotPresent
          args:
            - --config=/conf/relay.yaml
          ports:
            - name: otlp
              containerPort: 4317
              protocol: TCP
            - name: otlp-http
              containerPort: 4318
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 13133
          readinessProbe:
            httpGet:
              path: /
              port: 13133
          resources:
            limits:
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /conf
              name: config
      volumes:
        - name: config
          configMap:
            name: 'otel-collector'
