observability/service-grafana.yaml
# Source: grafana/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: observability
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/part-of: clickhouse-observability-stack
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: grafana-0.1.0
    app.kubernetes.io/version: "13.2.2"
    environment: dev
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana
  ports:
    - name: http
      port: 80
      targetPort: grafana
      protocol: TCP
