observability/service-otel-collector.yaml
# Source: otel-collector/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: observability
  labels:
    app.kubernetes.io/name: otel-collector
    app.kubernetes.io/instance: otel-collector
    app.kubernetes.io/part-of: clickhouse-observability-stack
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: otel-collector-0.1.0
    app.kubernetes.io/version: "0.161.0"
    environment: dev
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: otel-collector
    app.kubernetes.io/instance: otel-collector
  ports:
    - name: otlp
      port: 4317
      targetPort: otlp
      protocol: TCP
      appProtocol: grpc
    - name: otlp-http
      port: 4318
      targetPort: otlp-http
      protocol: TCP
